.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Destructive_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Component_Name2__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <formula>HYPERLINK(
            IF( Flosum__Component__c != null, &apos;/&apos; + Flosum__Component__r.Id , &apos;/&apos;+ Flosum__Metadata_Item__c), 
            IF(  Flosum__Component__c  != null, Flosum__Component__r.Flosum__Component_Name__c ,  Flosum__Metadata_Item__r.Flosum__API_Name__c  ), 
 &apos;_self&apos;)</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <default>true</default>
                    <label>ApexClass</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Flosum__Component__c</referenceTo>
        <relationshipName>Destructive_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Item</label>
        <referenceTo>Flosum__Metadata_Item__c</referenceTo>
        <relationshipName>Destructive_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipName>Destructive_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Post_Deployment_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Deployment Change</label>
        <type>Checkbox</type>
    </fields>
    <label>Destructive Changes</label>
    <nameField>
        <displayFormat>DM-{YY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Destructive Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destructive Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>